deploy/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app
  labels:
    app: sein-unt-zeit
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    deployment: web-app
